--- a/QRScanner/app/src/main/AndroidManifest.xml
+++ b/QRScanner/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".BarcodeResultActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:screenOrientation="nosensor">
