--- a/QRScanner/app/src/main/AndroidManifest.xml
+++ b/QRScanner/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".BarcodeResultActivity"></activity>
+        <activity android:name=".ScanHistory"></activity>
         <activity
             android:name=".MainActivity"
             android:screenOrientation="nosensor">
