--- a/QRScanner/app/src/main/AndroidManifest.xml
+++ b/QRScanner/app/src/main/AndroidManifest.xml
@@ -12,8 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BarcodeResultActivity"></activity>
-        <activity android:name=".ScanHistoryActivity"></activity>
+        <activity android:name=".BarcodeResultActivity"
+            android:screenOrientation="nosensor" />
+        <activity android:name=".ScanHistoryActivity"
+            android:screenOrientation="nosensor" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="nosensor">
