Change launcher icon and set app version automatically

--- a/QRScanner/app/build.gradle
+++ b/QRScanner/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "1.00"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -25,6 +25,10 @@ android {
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
+    }
+
+    applicationVariants.all {
+        variant -> variant.resValue "string", "versionName", variant.versionName
     }
 }
 
