QR Code Reader v2.00 - Initial Commit - Move to Firebase ML Kit's barcode API - UI/UX changes

--- a/QRScanner/app/src/main/AndroidManifest.xml
+++ b/QRScanner/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+            android:value="barcode" />
 
         <activity
             android:name=".MainActivity"
@@ -48,13 +51,6 @@
         <activity
             android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
             android:theme="@style/OtherActivities" />
-
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-        <meta-data
-            android:name="com.google.android.gms.vision.DEPENDENCIES"
-            android:value="barcode" />
     </application>
 
 </manifest>
