Adding connect to wifi action

--- a/QRScanner/app/src/main/AndroidManifest.xml
+++ b/QRScanner/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     android:installLocation="auto">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
