--- a/QRScanner/app/build.gradle
+++ b/QRScanner/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.android.gms.oss-licenses-plugin'
 
 android {
@@ -57,10 +56,6 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
 
-    // Firebase SDK for Google Analytics
-    implementation 'com.google.firebase:firebase-analytics:17.4.2'
-
-    // Firebase barcode decoding libs
-    implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
-    implementation 'com.google.firebase:firebase-ml-vision-barcode-model:16.1.1'
+    // ML Kit barcode decoding components
+    implementation 'com.google.mlkit:barcode-scanning:16.0.0'
 }
