--- a/QRScanner/app/src/main/AndroidManifest.xml
+++ b/QRScanner/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name=".ImageScanningActivity"
             android:label="@string/app_name"
             android:screenOrientation="nosensor"
-            android:theme="@style/Theme.MaterialComponents.NoActionBar" />
+            android:theme="@style/ImageScanningActivity" />
         <activity
             android:name=".SettingsActivity"
             android:label="Settings"
