Temporary disable obfuscation, bump versionCode: 27, keep versionName: 3.00.01

--- a/QRScanner/app/build.gradle
+++ b/QRScanner/app/build.gradle
@@ -11,7 +11,7 @@ android {
         applicationId "com.auroid.qrscanner"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 25
+        versionCode 27
         versionName "3.00.01"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -19,8 +19,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile(
                     'proguard-android-optimize.txt'),
                     'proguard-rules.pro'
