--- a/QRScanner/app/src/main/AndroidManifest.xml
+++ b/QRScanner/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name=".ImageScanningActivity"
             android:label="@string/app_name"
             android:screenOrientation="nosensor"
-            android:theme="@style/ImageScanningActivity" />
+            android:theme="@style/OtherActivities" />
         <activity
             android:name=".SettingsActivity"
             android:label="Settings"
@@ -46,10 +46,10 @@
             android:theme="@style/OtherActivities" />
         <activity
             android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
-            android:theme="@style/OtherActivities" />
+            android:theme="@style/LicenceActivity" />
         <activity
             android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
-            android:theme="@style/OtherActivities" />
+            android:theme="@style/LicenceActivity" />
     </application>
 
 </manifest>
