--- a/QRScanner/app/build.gradle
+++ b/QRScanner/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.auroid.qrscanner"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 29
-        versionName "3.01.00b"
+        versionCode 30
+        versionName "3.01.00"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
