--- a/QRScanner/app/src/main/AndroidManifest.xml
+++ b/QRScanner/app/src/main/AndroidManifest.xml
@@ -50,6 +50,12 @@
         <activity
             android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
             android:theme="@style/LicenceActivity" />
+        <meta-data
+          android:name="firebase_analytics_collection_deactivated"
+          android:value="${analytics_deactivated}" />
+        <meta-data
+          android:name="firebase_crashlytics_collection_enabled"
+          android:value="${crashlytics_enabled}" />
     </application>
 
 </manifest>
