--- a/QRScanner/app/build.gradle
+++ b/QRScanner/app/build.gradle
@@ -97,4 +97,7 @@ dependencies {
 
     // Google play core library for in-app review API
     implementation 'com.google.android.play:core:1.8.2'
+
+    // Google Mobile Ads SDK
+    implementation 'com.google.android.gms:play-services-ads:19.4.0'
 }
