Implement AdMob mediation with Facebook Audience Network

--- a/QRScanner/app/build.gradle
+++ b/QRScanner/app/build.gradle
@@ -100,4 +100,6 @@ dependencies {
 
     // Google Mobile Ads SDK
     implementation 'com.google.android.gms:play-services-ads:19.4.0'
+    // Facebook Ads mediation for Google Ads
+    implementation 'com.google.ads.mediation:facebook:6.0.0.0'
 }
