--- a/QRScanner/app/build.gradle
+++ b/QRScanner/app/build.gradle
@@ -15,6 +15,7 @@ android {
         versionName "3.03.02"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        resConfigs "en"
     }
 
     buildTypes {
