--- a/QRScanner/app/build.gradle
+++ b/QRScanner/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.auroid.qrscanner"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 48
-        versionName "3.04.00"
+        versionCode 49
+        versionName "3.05.00"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resConfigs "en"
@@ -50,7 +50,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.preference:preference:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -58,7 +58,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
 
     // Room components
-    def roomVersion = '2.2.5'
+    def roomVersion = '2.2.6'
     implementation "androidx.room:room-runtime:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
@@ -69,38 +69,38 @@ dependencies {
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersion"
 
     // CameraX core library
-    def camerax_version = '1.0.0-beta11'
+    def camerax_version = '1.0.0-rc01'
     implementation "androidx.camera:camera-core:$camerax_version"
     // CameraX Camera2 extensions
     implementation "androidx.camera:camera-camera2:$camerax_version"
     // CameraX Lifecycle library
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     // CameraX View class
-    implementation 'androidx.camera:camera-view:1.0.0-alpha18'
+    implementation 'androidx.camera:camera-view:1.0.0-alpha20'
 
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'
 
     // ML Kit barcode decoding components
-    implementation 'com.google.mlkit:barcode-scanning:16.0.3'
+    implementation 'com.google.mlkit:barcode-scanning:16.1.0'
 
     // Google analytics components
-    implementation 'com.google.firebase:firebase-analytics:17.6.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.0'
 
     api 'com.google.guava:guava:28.2-jre'
 
     // Firebase Crashlytics
-    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
+    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
 
     // Subsampling Scale Image View library
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
 
     // Google play core library for in-app review API
-    implementation 'com.google.android.play:core:1.8.2'
+    implementation 'com.google.android.play:core:1.9.0'
 
     // Google Mobile Ads SDK
-    implementation 'com.google.android.gms:play-services-ads:19.4.0'
+    implementation 'com.google.android.gms:play-services-ads:19.6.0'
     // Facebook Ads mediation for Google Ads
     implementation 'com.google.ads.mediation:facebook:6.1.0.0'
 }
