--- a/QRScanner/app/build.gradle
+++ b/QRScanner/app/build.gradle
@@ -86,7 +86,7 @@ dependencies {
     implementation 'com.google.mlkit:barcode-scanning:16.1.0'
 
     // Google analytics components
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.1'
 
     api 'com.google.guava:guava:28.2-jre'
 
@@ -99,8 +99,6 @@ dependencies {
     // Google play core library for in-app review API
     implementation 'com.google.android.play:core:1.9.0'
 
-    // Google Mobile Ads SDK
-    implementation 'com.google.android.gms:play-services-ads:19.6.0'
-    // Facebook Ads mediation for Google Ads
-    implementation 'com.google.ads.mediation:facebook:6.1.0.0'
+    // Facebook Ads
+    implementation 'com.facebook.android:audience-network-sdk:6.2.0'
 }
