--- a/QRScanner/app/build.gradle
+++ b/QRScanner/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
 
     // Room components
-    def roomVersion = '2.2.6'
+    def roomVersion = '2.3.0'
     implementation "androidx.room:room-runtime:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
@@ -68,14 +68,14 @@ dependencies {
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersion"
 
     // CameraX core library
-    def camerax_version = '1.0.0-rc04'
+    def camerax_version = '1.0.0'
     implementation "androidx.camera:camera-core:$camerax_version"
     // CameraX Camera2 extensions
     implementation "androidx.camera:camera-camera2:$camerax_version"
     // CameraX Lifecycle library
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     // CameraX View class
-    implementation 'androidx.camera:camera-view:1.0.0-alpha23'
+    implementation 'androidx.camera:camera-view:1.0.0-alpha24'
 
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 
@@ -85,7 +85,7 @@ dependencies {
     implementation 'com.google.mlkit:barcode-scanning:16.1.1'
 
     // Google analytics components
-    implementation 'com.google.firebase:firebase-analytics:18.0.2'
+    implementation 'com.google.firebase:firebase-analytics:18.0.3'
 
     api 'com.google.guava:guava:28.2-jre'
 
